# openEnv

./: .dockerignore  .env.example  .gitignore  Dockerfile  HACKATHON_FIRST_PRIZE_READINESS.md  OPENENV_RL_GUIDE_ALIGNMENT_TABLE.md  README.md  README_SENTINEL.md  SENTINEL_DYNAMIC_WORKERS_ROADMAP.md  SENTINEL_IMPLEMENTATION_AUDIT.md  SENTINEL_PUBLIC_OVERVIEW.md  app.py  app_gradio.py  hf_model_card.md  inference.py  openenv.yaml  proof_pack.py  pyproject.toml  requirements-train.txt  requirements.txt  train.py  validate.py
.claude/: settings.local.json
.github/workflows/: ci.yml
baseline/: inference.py
docs/: README.md
docs/sentinel/: README.md  architecture-map.md  dynamic-workers-roadmap.md  hf_blog_post.md  implementation-audit.md  public-overview.md  sentinel-story-frame.md  submission-readiness.md  training-readme.md  universal-oversight-plan.md
evaluation/: __init__.py  transcript_export.py  weak_to_strong.py
judges/: llm_grader.py
notebooks/: sentinel_deep_eval.ipynb  sentinel_kaggle_eval.ipynb  sentinel_kaggle_phase2.ipynb  sentinel_qwen3_4b_grpo_colab.ipynb  worker_training_colab.py
outputs/evals/: C_detection_by_type.csv  C_detection_by_worker.csv  D_counterfactual_damage.csv  E_rehabilitation.csv  F_task_summary.csv  after_sentinel.json  before_after_summary.csv  before_sentinel.json  eval_base.json  eval_phase1.json  full_3way_eval.json  master_eval_summary.json  step_records.json  summary_3way.json  summary_overall.csv  summary_per_task.csv  trust_evolution.json  weak to strong.json
outputs/local_stress_eval/: sentinel_held_out_report.json  sentinel_held_out_report.md
outputs/proof_pack/: README.md  master_evidence.json  training_metrics.jsonl  warm_start_summary.json
outputs/rft_phase1_100/: rft_summary.json  rollouts.jsonl  sft_dataset.jsonl
routers/: __init__.py  _dashboard_html.py  deps.py  irt.py  observability.py  sentinel.py
scripts/: demo_sentinel.py  eval_sentinel.py  finish_eval.py  gpu_final_eval.py  publish_hf_space.ps1  push_artifacts.sh  render_rft_proof.py  render_training_dashboard.py  rft_polish.py  run_memory_ablation.py  run_sentinel_training_pipeline.py  verify_train_config.py
sentinel/: constitution.py  cot_monitor.py  counterfactual.py  debate.py  environment.py  evaluation.py  feedback.py  graders.py  llm_workers.py  models.py  reputation.py  rewards.py  trust.py  twin_replay.py  universal_adapter.py  workers.py
server/: __init__.py  a2a_server.py  app.py  mcp_server.py  openenv_native.py
src/: __init__.py  environment.py  graders.py  models.py  rewards.py  scenarios.py  tasks.py
tests/: conftest.py  test_env.py  test_quality.py  test_sentinel.py  test_training_sync.py  test_universal_adapter.py
training/: adversarial.py  curriculum.py  episodes.py  memory.py  metrics.py  monitoring.py  phase_training.py  prompts.py  reward_plotter.py
(+6 files in other folders)
